infra/prod-k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" #"letsencrypt-staging"
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - app.car-auctions.store
      - api.car-auctions.store
      - id.car-auctions.store
    secretName: car-auctions-tls
  rules:
    - host: app.car-auctions.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app-clusterip
                port:
                  number: 3000
    - host: api.car-auctions.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-clusterip
                port:
                  number: 80
    - host: id.car-auctions.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity-clusterip
                port:
                  number: 80
